=== HEAD

* Make :eager_graph association option work correctly when eagerly loading many_to_many associations (jeremyevans)

* Make eager_unique_table_alias consider joined tables as well as tables in the FROM clause (jeremyevans)

* Make add_graph_aliases work correctly even if set_graph_aliases hasn't been used (jeremyevans)

* Fix using :conditions that are a placeholder string in an association (e.g. :conditions=>['a = ?', 42]) (jeremyevans)

* On MySQL, make Dataset#insert_ignore affect #insert as well as #multi_insert and #import (jeremyevans, tmm1)

* Add -t option to bin/sequel to output the full backtrace if an exception is raised (jeremyevans)

* Make schema_dumper extension ignore errors with indexes unless it is dumping in the database-specific type format (jeremyevans)

* Don't dump partial indexes in the MySQL adapter (jeremyevans)

* Add :ignore_index_errors option to Database#create_table and :ignore_errors option to Database#add_index (jeremyevans)

* Make graphing a complex dataset work correctly (jeremyevans)

* Fix MySQL command out of sync errors, disconnect from database if they occur (jeremyevans)

* In the schema_dumper extension, do a much better job of parsing defaults from the database (jeremyevans)

* On PostgreSQL, assume the public schema if one is not given and there is no default in Database#tables (jeremyevans)

* Ignore a :default value if creating a String :text=>true or File column on MySQL, since it doesn't support defaults on text/blob columns (jeremyevans)

* On PostgreSQL, do not raise an error when attempting to reset the primary key sequence for a table without a primary key (jeremyevans)

* Allow plugins to have a configure method that is called on every attempt to load them (jeremyevans)

* Attempting to load an already loaded plugin no longer calls the plugin's apply method (jeremyevans)
